// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixInstructionProcessor background and foreground on the message (mind the order) 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 2.52 (background color: #8a94a8, foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#e7ecd8",
      }
    }
  />
  <span>
    #8a94a8, foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    #8a94a8, foreground color: #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
  <ul>
    <li>
      <span>
        test return value
      </span>
    </li>
  </ul>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground and background color on the message (mind the order) 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 2.52 (foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    #8a94a8, background color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#e7ecd8",
      }
    }
  />
  <span>
    #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
  <ul>
    <li>
      <span>
        test return value
      </span>
    </li>
  </ul>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground color on the message 1`] = `
<React.Fragment>
  <span>
    color contrast of 2.52 (foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    #8a94a8; nothing else to match here)
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor no background nor foreground on the message 1`] = `
<React.Fragment>
  there is nothing that will trigger the processor to change the fix instruction here
</React.Fragment>
`;

exports[`FixInstructionProcessor recommendColor has one recommendation 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 4.48 (foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#fefefe",
      }
    }
  />
  <span>
    #fefefe, background color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#21809d",
      }
    }
  />
  <span>
    #21809d, font size: 10.8pt (14.4px), font weight: normal). Expected contrast ratio of 4.5:1
  </span>
  <ul>
    <li>
      <span>
        Use foreground color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#ffffff",
          }
        }
      />
      <span>
        #ffffff and the original background color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#21809d",
          }
        }
      />
      <span>
        #21809d to meet a contrast ratio of 4.53:1
      </span>
    </li>
    <li>
      <span>
        Or use background color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#1f7995",
          }
        }
      />
      <span>
        #1f7995 and the original foreground color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#fcfcfc",
          }
        }
      />
      <span>
        #fcfcfc to meet a contrast ratio of 4.84:1.
      </span>
    </li>
  </ul>
</React.Fragment>
`;

exports[`FixInstructionProcessor recommendColor has two recommendations 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 4.48 (foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#fefefe",
      }
    }
  />
  <span>
    #fefefe, background color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#21809d",
      }
    }
  />
  <span>
    #21809d, font size: 10.8pt (14.4px), font weight: normal). Expected contrast ratio of 4.5:1
  </span>
  <ul>
    <li>
      <span>
        Use foreground color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#ffffff",
          }
        }
      />
      <span>
        #ffffff and the original background color: 
      </span>
      <span
        aria-hidden={true}
        className="fixInstructionColorBox"
        style={
          Object {
            "backgroundColor": "#21809d",
          }
        }
      />
      <span>
        #21809d to meet a contrast ratio of 4.53:1.
      </span>
    </li>
  </ul>
</React.Fragment>
`;

exports[`FixInstructionProcessor we assume only one instance of fore/background color, second instance will be ignored 1`] = `
<React.Fragment>
  <span>
    first foreground color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <span>
    #ffffff, second foreground: #000000, first background color: 
  </span>
  <span
    aria-hidden={true}
    className="fixInstructionColorBox"
    style={
      Object {
        "backgroundColor": "#AAAAAA",
      }
    }
  />
  <span>
    #AAAAAA, second background color: #bbBBbb
  </span>
  <ul>
    <li>
      <span>
        test return value
      </span>
    </li>
  </ul>
</React.Fragment>
`;

exports[`FixInstructionProcessor when we have nothing to process 1`] = `
<React.Fragment>
  nothing to process
</React.Fragment>
`;
